GC 업데이트